--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -33,6 +33,6 @@ jobs:
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: <your-netlify-site-id>
+          NETLIFY_AUTH_TOKEN: nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0
+          NETLIFY_SITE_ID: bespoke-daffodil-05ad91
         with:
