--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -1,5 +1,4 @@
 name: Build and Deploy
-#test
 
 on:
   push:
@@ -34,6 +33,6 @@ jobs:
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
         env:
-          NETLIFY_AUTH_TOKEN: nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0
-          NETLIFY_SITE_ID: bespoke-daffodil-05ad91
+          NETLIFY_AUTH_TOKEN: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
+          NETLIFY_SITE_ID: "bespoke-daffodil-05ad91"
         with:
