--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Change to the client directory
+        run: cd client
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
