--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -33,6 +33,7 @@ jobs:
 
     steps:
       - name: Deploy to Netlify
+        working-directory: client
         uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
