--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -35,8 +35,7 @@ jobs:
       - name: Deploy to Netlify
         working-directory: client
         uses: netlify/actions/cli@master
-        env:
-          NETLIFY_AUTH_TOKEN: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
-          NETLIFY_SITE_ID: "bespoke-daffodil-05ad91"
         with:
           build-dir: "./build"
+          netlify-auth-token: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
+          netlify-site-id: "bespoke-daffodil-05ad91"
