--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -34,7 +34,6 @@ jobs:
     steps:
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
-        with:
-          build-dir: "./build"
-          netlify-auth-token: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
-          netlify-site-id: "bespoke-daffodil-05ad91"
+        env:
+          NETLIFY_AUTH_TOKEN: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
+          NETLIFY_SITE_ID: "bespoke-daffodil-05ad91"
