--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -34,6 +34,9 @@ jobs:
     steps:
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
+        with:
+          publish-dir: "./client/build"
+          production-branch: main
         env:
           NETLIFY_AUTH_TOKEN: "nfp_vQE6QsQ6gWjfwaqNaXihuRSt2KCKTa7R31f0"
           NETLIFY_SITE_ID: "bespoke-daffodil-05ad91"
