--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,10 +11,10 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the rest of the application code
-COPY . .
+COPY src/ .
 
 # Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 3030
 
 # Command to run the application
 CMD ["npm", "start"]
