--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,17 +1,35 @@
-# Fetching the minified node image on apline linux
-FROM node:slim
+# Use an official Node.js runtime as the base image
+# This line specifies the base image for the Docker image. In this case, we're using an official Node.js runtime image with version 18.18 and the # Alpine Linux distribution.
+FROM node:18.18-alpine
 
-# Declaring env
-ENV NODE_ENV development
+# This line installs the build-base package using the Alpine package manager (apk). This package includes the necessary tools for building   
+# native Node.js modules.
+RUN apk add build-base
 
-# Copying all the files in our project
-COPY . .
+# This line installs Python 3 using the Alpine package manager. Python is required for some Node.js modules that have native dependencies.
+RUN apk add python3
 
-# Installing dependencies
+# This line installs the node-gyp package globally using npm. node-gyp is a tool for building native Node.js modules.
+RUN npm install -g node-gyp
+
+# Copy package.json and package-lock.json to the container
+COPY package*.json ./
+
+# Install application dependencies
 RUN npm install
 
-# Starting our application
-CMD [ "npm", "run", "dev" ]
+# Copy the rest of your application code to the container
+COPY . .
 
-# Exposing server port
+# This line sets an environment variable that tells the Prisma ORM to ignore missing engine checksums. This is useful when deploying to certain 
+# platforms like Heroku.
+ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
+
+# This line generates the Prisma client code based on the schema defined in the application.
+RUN npx prisma generate
+
+# Expose the port that your application will run on (Nest.js default is 3000)
 EXPOSE 3000
+
+# Define the command to run your application
+CMD ["npm", "run","dev"]
