--- a/.github/workflows/mysql-deployment.yaml
+++ b/.github/workflows/mysql-deployment.yaml
@@ -22,3 +22,16 @@ spec:
               value: mydatabase
           ports:
             - containerPort: 3306
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-service
+spec:
+  selector:
+    app: mysql
+  ports:
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
+  type: LoadBalancer
