--- a/api/package.json
+++ b/api/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
