--- a/.github/workflows/build_deploy_api.yaml
+++ b/.github/workflows/build_deploy_api.yaml
@@ -1,4 +1,4 @@
-name: Deploy Nginx on API Change
+name: Deploy on API change
 
 on:
   push:
@@ -6,6 +6,9 @@ on:
       - main
     paths:
       - "api/**" # This ensures the workflow is triggered only when changes are made in the "api" folder
+
+env:
+  REGION: europe-west3
 
 jobs:
   deploy:
@@ -25,9 +28,9 @@ jobs:
         env:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT/demo/nginx:latest ./api
-          docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT/demo/nginx:latest
+          gcloud auth configure-docker ${{env.REGION}}-docker.pkg.dev
+          docker build -t ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/api/nginx:latest ./api
+          docker push ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/api/nginx:latest
 
       - name: deploy to gke
         env:
