--- a/.github/workflows/build_deploy_api.yaml
+++ b/.github/workflows/build_deploy_api.yaml
@@ -17,12 +17,13 @@ jobs:
       - name: code checkout
         uses: actions/checkout@v2
 
-      - name: install the gcloud cli
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+      - id: 'auth'
+          uses: 'google-github-actions/auth@v2'
+          with:
+            credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: 'Set up Cloud SDK'
+          uses: 'google-github-actions/setup-gcloud@v2'
+      
 
       - name: build and push the docker image
         env:
