--- a/.github/workflows/build_deploy_api.yaml
+++ b/.github/workflows/build_deploy_api.yaml
@@ -31,8 +31,8 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           gcloud auth configure-docker ${{env.REGION}}-docker.pkg.dev
-          docker build -t ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact?/api:latest ./api
-          docker push ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact?/api:latest
+          docker build -t ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact/api:latest ./api
+          docker push ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact/api:latest
 
       - name: "Deploy to GKE"
         env:
