--- a/api-service.yaml
+++ b/api-service.yaml
@@ -29,4 +29,4 @@ spec:
     spec:
       containers:
         - name: api
-          image: europe-west3-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/project-artefact/api:latest
+          image: europe-west3-docker.pkg.dev/${GOOGLE_PROJECT}/project-artefact/api:latest
