--- a/api/dockerfile
+++ b/api/dockerfile
@@ -26,7 +26,7 @@ COPY . .
 ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
 
 # This line generates the Prisma client code based on the schema defined in the application.
-RUN npx prisma generate
+RUN npx prisma generateeee
 
 # Expose the port that your application will run on (Nest.js default is 3000)
 EXPOSE 3000
