--- a/.github/workflows/build_deploy_api.yaml
+++ b/.github/workflows/build_deploy_api.yaml
@@ -34,7 +34,7 @@ jobs:
           GOOGLE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           gcloud auth configure-docker ${{env.REGION}}-docker.pkg.dev
-          docker build -t ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact/api:latest ./api
+          docker build --no-cache -t ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact/api:latest ./api
           docker push ${{env.REGION}}-docker.pkg.dev/$GOOGLE_PROJECT/project-aterfact/api:latest
 
       - name: "Configure kubectl for GKE"
