--- a/api/dockerfile
+++ b/api/dockerfile
@@ -2,13 +2,6 @@
 # This line specifies the base image for the Docker image. In this case, we're using an official Node.js runtime image with version 18.18 and the # Alpine Linux distribution.
 FROM node:18.18-alpine
 
-# This line installs the build-base package using the Alpine package manager (apk). This package includes the necessary tools for building   
-# native Node.js modules.
-RUN apk add build-base
-
-# This line installs Python 3 using the Alpine package manager. Python is required for some Node.js modules that have native dependencies.
-RUN apk add python3
-
 # This line installs the node-gyp package globally using npm. node-gyp is a tool for building native Node.js modules.
 RUN npm install -g node-gyp
 
@@ -26,7 +19,7 @@ COPY . .
 ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
 
 # This line generates the Prisma client code based on the schema defined in the application.
-RUN npx prisma generateeee
+RUN npx prisma generate
 
 # Expose the port that your application will run on (Nest.js default is 3000)
 EXPOSE 3000
