--- a/api/dockerfile
+++ b/api/dockerfile
@@ -9,13 +9,12 @@ RUN npm install -g node-gyp
 COPY package*.json ./
 
 # Install application dependencies
-RUN npm install
+RUN npm install --verbose
 
 # Copy the rest of your application code to the container
 COPY . .
 
-# This line sets an environment variable that tells the Prisma ORM to ignore missing engine checksums. This is useful when deploying to certain 
-# platforms like Heroku.
+
 ENV PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING=1
 
 # This line generates the Prisma client code based on the schema defined in the application.
