--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.8.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@faker-js/faker": "^8.4.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.0",
     "prisma": "^5.8.1"
   }
 }
