--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,11 +1,16 @@
-FROM node:18-alpine
+# Step 1: Build the application
+FROM node:16 AS builder
 
-COPY package.json .
-
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm ci
 
 COPY . .
+RUN npm run build
 
-EXPOSE 5173
+# Step 2: Set up the production environment
+FROM nginx:stable-alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
-CMD [ "npm", "run", "dev" ]
+EXPOSE 8080
+CMD ["nginx", "-g", "daemon off;"]
