--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,16 +1,13 @@
-# Step 1: Build the application
-FROM node:16 AS builder
-
-COPY package.json package-lock.json ./
-RUN npm ci
+FROM node:18-alpine3.17 as build
 
 COPY . .
+
+RUN npm install
 RUN npm run build
 
-# Step 2: Set up the production environment
-FROM nginx:stable-alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 8080
-CMD ["nginx", "-g", "daemon off;"]
+FROM ubuntu
+RUN apt-get update
+RUN apt-get install nginx -y
+COPY --from=build /app/dist /var/www/html/
+EXPOSE 5173
+CMD ["nginx","-g","daemon off;"]
