--- a/client/dockerfile
+++ b/client/dockerfile
@@ -8,6 +8,6 @@ RUN npm run build
 FROM ubuntu
 RUN apt-get update
 RUN apt-get install nginx -y
-COPY --from=build /app/dist /var/www/html/
+COPY --from=build /dist /var/www/html/
 EXPOSE 5173
 CMD ["nginx","-g","daemon off;"]
