--- a/client-service.yaml
+++ b/client-service.yaml
@@ -7,9 +7,10 @@ spec:
   type: LoadBalancer
   selector:
     app: client-service
-  ports:
-    - port: 5173
-      targetPort: 5173
+ - port: 8080
+    targetPort: 80
+    protocol: TCP
+    name: http
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -30,3 +31,5 @@ spec:
       containers:
         - name: client
           image: europe-west3-docker.pkg.dev/cloud-m2-412515/project-aterfact/client:latest
+        ports:
+        - containerPort: 80
