--- a/client-service.yaml
+++ b/client-service.yaml
@@ -33,3 +33,9 @@ spec:
           image: europe-west3-docker.pkg.dev/cloud-m2-412515/project-aterfact/client:latest
           ports:
             - containerPort: 80
+          env:
+            - name: VITE_API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: api-config
+                  key: VITE_API_URL
