--- a/client/dockerfile
+++ b/client/dockerfile
@@ -7,6 +7,9 @@ RUN npm run build
 
 FROM ubuntu
 
+# Delete .env file
+RUN rm -rf .env
+
 RUN apt-get update
 RUN apt-get install nginx -y
 COPY --from=build /dist /var/www/html/
