--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: client-service
+  name: api-service
 spec:
   type: LoadBalancer
   selector:
-    app: client-service
+    app: api-service
   ports:
-    - port: 8080
-      targetPort: 80
+    - port: 3000
+      targetPort: 3000
