--- a/k8s/client-service.yaml
+++ b/k8s/client-service.yaml
@@ -10,3 +10,26 @@ spec:
   ports:
     - port: 8080
       targetPort: 80
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: client
+  labels:
+    app: client-service
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: client-service
+  template:
+    metadata:
+      labels:
+        app: client-service
+    spec:
+      containers:
+        - name: client
+          image: europe-west3-docker.pkg.dev/cloud-m2-412515/project-aterfact/client:latest
+          ports:
+            - containerPort: 80
