--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -14,9 +14,9 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: client-service
+                name: api-service
                 port:
-                  number: 8080
+                  number: 3000
           - path: /api/?(.*)
             pathType: Prefix
             backend:
