--- a/.github/workflows/build_deploy_api.yaml
+++ b/.github/workflows/build_deploy_api.yaml
@@ -45,4 +45,4 @@ jobs:
 
       - name: "Deploy to GKE"
         run: |
-          kubectl apply -f api-service.yaml
+          kubectl apply -f k8s/api-service.yaml
