--- a/.github/workflows/build_deploy_client.yaml
+++ b/.github/workflows/build_deploy_client.yaml
@@ -45,4 +45,4 @@ jobs:
 
       - name: "Deploy to GKE"
         run: |
-          kubectl apply -f client-service.yaml
+          kubectl apply -f k8s/client-service.yaml
