--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -10,3 +10,28 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: api
+  labels:
+    app: api-service
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: api-service
+  template:
+    metadata:
+      labels:
+        app: api-service
+    spec:
+      containers:
+        - name: api
+          image: europe-west3-docker.pkg.dev/cloud-m2-412515/project-aterfact/api:latest
+          ports:
+            - containerPort: 3000
+          env:
+            - name: DATABASE_URL
+              value: "mysql://root:mysecretpassw@mysql-service:3306/mydatabase?schema=public"
